@@ -4,10 +4,19 @@
 // This file is part of GLED, released under GNU General Public License version 2.
 // For the licensing terms see $GLEDSYS/LICENSE or http://www.gnu.org/.
 
+//________________________________________________________________________
+// Mover
+//
+// Translates and/or rotates mNode (if not null) in its local frame.
+// mMi ~ index of Move axis (1~x,2~y,3~z),
+// mMa ~ amount of displacement;
+// mRi, mRj ~ indices determining the Rotation plane,
+// mRa ~ amount of angular displacement (in radians).
+// If mMa!=0 translates; if mRa!=0 rotates.
+//________________________________________________________________________
+
 #include "Mover.h"
 #include <Gled/GledMirDefs.h>
-
-#include "FL/gl.h"
 
 #include <memory>
 
@@ -23,13 +32,16 @@ void Mover::_init()
 
 void Mover::Operate(Operator::Arg* op_arg) throw(Operator::Exception)
 {
-  if(!mNode) return;
-  if(mMa != 0) {
-    OP_EXE_OR_SP_MIR(mNode, MoveLF, mMi, mMa);
+  Operator::PreOperate(op_arg);
+  if(mNode) {
+    if(mMa != 0) {
+      OP_EXE_OR_SP_MIR(mNode, MoveLF, mMi, mMa);
+    }
+    if(mRa != 0) {
+      OP_EXE_OR_SP_MIR(mNode, RotateLF, mRi, mRj, mRa);
+    }
   }
-  if(mRa != 0) {
-    OP_EXE_OR_SP_MIR(mNode, RotateLF, mRi, mRj, mRa);
-  }
+  Operator::PostOperate(op_arg);
 }
 
 #include "Mover.c7"
